--- a/src/HelloBlazorServer/Pages/Index.razor
+++ b/src/HelloBlazorServer/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+@page "/"
 
 <div class="jumbotron" xmlns="http://www.w3.org/1999/html">
     <h1 class="display-4">Welcome!</h1>
@@ -7,4 +7,5 @@
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="https://forms.gle/TpGkmTZttukhDMRB6" role="button">Share your feedback</a>
     </p>
+    <TestComponent Title="test" ></TestComponent>
 </div>
