--- a/src/HelloBlazorServer/Pages/_Host.cshtml
+++ b/src/HelloBlazorServer/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/"
+@page "/"
 @using Samples.HelloBlazorServer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -14,6 +14,8 @@
     <base href="~/" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="css/site.css" rel="stylesheet" />
+    <!-- Required CSS isolation bundling -->
+    <link href="Samples.HelloBlazorServer.styles.css" rel="stylesheet">
 </head>
 <body>
     <app>
