--- a/src/HelloBlazorServer/Pages/SimpleChat.razor
+++ b/src/HelloBlazorServer/Pages/SimpleChat.razor
@@ -1,4 +1,4 @@
-﻿@page "/simpleChat"
+@page "/simpleChat"
 @using System.Threading
 @using ActualLab.Fusion.Extensions
 @inherits ComputedStateComponent<(string Name, string Message, string Time)[]>
