--- a/src/HelloBlazorServer/Pages/Index.razor
+++ b/src/HelloBlazorServer/Pages/Index.razor
@@ -5,6 +5,6 @@
     <p class="lead">This is HelloBlazorServer sample showing how to use Fusion with Server-Side Blazor.</p>
     <p class="lead">Please share your feedback once you're done playing with it!</p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="https://forms.gle/TpGkmTZttukhDMRB6" role="button">Share your feedback</a>
+        <NavLink class="btn btn-primary btn-lg" href="new-game">New Game</NavLink>
     </p>
 </div>
