--- a/src/HelloBlazorServer/Shared/MainLayout.razor
+++ b/src/HelloBlazorServer/Shared/MainLayout.razor
@@ -1,9 +1,10 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
+<!--
 <div class="sidebar">
     <NavMenu />
 </div>
-
+-->
 <div class="main">
     <div class="top-row px-4">
         <a href="https://github.com/ActualLab/Fusion" target="_blank">About</a>
