--- a/src/HelloBlazorServer/Pages/RoomTable.razor
+++ b/src/HelloBlazorServer/Pages/RoomTable.razor
@@ -21,7 +21,7 @@
         {
             <tr>
                 <td style="width: 15%; max-width: 20%">@room.Name</td>
-                <td style="width: 15%; max-width: 20%">@room.Id</td>
+                <td style="width: 15%; max-width: 20%"><a href="/room/@room.Id">@room.Id</a></td>
             </tr>
         }
     </tbody>
