--- a/src/HelloBlazorServer/Pages/Index.razor
+++ b/src/HelloBlazorServer/Pages/Index.razor
@@ -2,8 +2,7 @@
 
 <div class="jumbotron" xmlns="http://www.w3.org/1999/html">
     <h1 class="display-4">Welcome!</h1>
-    <p class="lead">This is HelloBlazorServer sample showing how to use Fusion with Server-Side Blazor.</p>
-    <p class="lead">Please share your feedback once you're done playing with it!</p>
+    <p class="lead">This is Planning Poker App using Fusion with Server-Side Blazor.</p>
     <p class="lead">
         <NavLink class="btn btn-primary btn-lg" href="new-game">New Game</NavLink>
     </p>
