--- a/src/HelloBlazorServer/Pages/NewGame.razor
+++ b/src/HelloBlazorServer/Pages/NewGame.razor
@@ -10,6 +10,9 @@
         <div class="form-group"> 
             <input @bind-value="@GameName" @bind-value:event="oninput" type="text" class="form-control" id="gameName" name="gameName" placeholder="Enter game's name">
         </div>
+        <div class="form-group">
+            <input @bind-value="@PlayerName" @bind-value:event="oninput" type="text" class="form-control" id="playerName" name="playerName" placeholder="Enter your Name">
+        </div>
         <!-- Removed Voting System select component as per instruction -->
         <button type="submit" class="btn btn-primary">Create game</button>
     </form>
@@ -18,13 +21,15 @@
 <RoomTable></RoomTable>
 
 @code {
-    private string GameName { get; set; } = string.Empty;   
+    private string GameName { get; set; } = string.Empty;
+
+    private string PlayerName { get; set; } = string.Empty;
 
     private async Task Post()
     {
         if (GameName == "")
             return;
-        await Commander.Call(new Create_NewRoom(GameName));
+        await Commander.Call(new Create_NewRoom_And_Join_Room(GameName,PlayerName));
         GameName = "";
     }
 }
